# rayblazer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark_log.txt  benchmarks
src/: main.cpp  parser.cpp  parser.hpp  primitives.cpp  primitives.hpp
